--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="./CSS/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script src="./main.js" defer></script>
-    <title>Library</title>
+    <title>Tic Tac Toe</title>
 </head>
 
 <body>
     <div class="container">
-        
+        <div class="game_module">
+            <h1>Tic Tac Toe</h1>
+            <div class="field_container">
+                <button class="field"></button><button class="field"></button><button class="field"></button><button
+                    class="field"></button><button class="field"></button><button class="field"></button><button
+                    class="field"></button><button class="field"></button><button class="field"></button>
+            </div>
+            <button class="restart btn">Restart</button>
+        </div>
     </div>
 </body>
 
