--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     class="field"></button><button class="field"></button><button class="field"></button><button
                     class="field"></button><button class="field"></button><button class="field"></button>
             </div>
+            <p class="result">Result: <span></span></p>
             <button class="restart btn">Restart</button>
         </div>
     </div>
