--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <div class="container">
         <div class="game_module">
             <h1>Tic Tac Toe</h1>
+            <div class="controls">
+                <label for="player-select">Choose 2nd player:</label>
+                <select name="player" id="player-select">
+                    <option value="player">Player</option>
+                    <option value="AI">AI</option>
+                </select>
+            </div>
             <div class="field_container">
                 <button class="field"></button><button class="field"></button><button class="field"></button><button
                     class="field"></button><button class="field"></button><button class="field"></button><button
